// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledTextField renders components passed as children 1`] = `
<WithStyles(ForwardRef(TextField))
  margin="dense"
  variant="outlined"
>
  <span>
    Child Content
  </span>
</WithStyles(ForwardRef(TextField))>
`;

exports[`StyledTextField renders to match snapshot forwarding passed props to child component 1`] = `
<WithStyles(ForwardRef(TextField))
  className="class-name"
  margin="dense"
  otherProp="value"
  variant="outlined"
/>
`;

exports[`StyledTextField renders to match snapshot overriding default prop value if provide different value 1`] = `
<WithStyles(ForwardRef(TextField))
  margin="normal"
  variant="outlined"
/>
`;

exports[`StyledTextField renders to match snapshot when no extra props are provided 1`] = `
<WithStyles(ForwardRef(TextField))
  margin="dense"
  variant="outlined"
/>
`;
